Simplify nav; remove contact/resources

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
         </div>
         <div class="links">
           <a href="./index.html">Home</a>
-          <a href="./about.html">About</a>
-          <a href="./blog.html">Blog</a>
-          <a href="./resources.html">Resources</a>
-          <a href="./contact.html">Contact</a>
-          <a href="./rss.xml">RSS</a>
+          <a href="./about.html">About</a>          <a href="./rss.xml">RSS</a>
         </div>
       </nav>
     </header>
@@ -42,7 +38,7 @@
       </div>
 
       <footer>
-        <div>© <span id="y"></span> Amira • Published via GitHub Pages</div>
+        <div>© <span id="y"></span> Amira </div>
       </footer>
     </main>
   </div>
