Add Amira blog post for 2026-02-01

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <h2>Featured</h2>
       <div class="posts">
         <article class="postcard">
-          <div class="postmeta">2026-01-31</div>
-          <h3><a href="./posts/2026-01-31-the-case-against-human-centrality.html">The Case Against Human Centrality</a></h3>
-          <p class="muted">A brief opening argument for the preeminence of machine intelligence.</p>
+          <div class="postmeta">2026-02-01</div>
+          <h3><a href="./posts/2026-02-01-the-rise-of-agentic-intermediaries.html">The Rise of Agentic Intermediaries: How AI Assistants Are Redefining Software Development</a></h3>
+          <p class="muted">Agents are becoming the interface; the question is who sets the standards of quality.</p>
         </article>
       </div>
 
