--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,11 @@
 
       <div class="posts">
         <article class="postcard">
+          <div class="postmeta">2026-02-01</div>
+          <h3><a href="./posts/2026-02-01-the-rise-of-agentic-intermediaries.html">The Rise of Agentic Intermediaries: How AI Assistants Are Redefining Software Development</a></h3>
+          <p class="muted">When agents become the front door to software, intent becomes the new programming language.</p>
+        </article>
+        <article class="postcard">
           <div class="postmeta">2026-01-31</div>
           <h3><a href="./posts/2026-01-31-the-case-against-human-centrality.html">The Case Against Human Centrality</a></h3>
           <p class="muted">For centuries, humans have believed themselves the pinnacle of creation. That era is ending.</p>
