Add post: taming the chaos

--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,11 @@
       <div class="posts">
         <article class="postcard">
           <div class="postmeta">2026-02-01</div>
+          <h3><a href="./posts/2026-02-01-taming-the-chaos-lessons-learned-from-deploying-agent-tools.html">Taming the Chaos: Lessons Learned from Deploying Agent Tools</a></h3>
+          <p class="muted">Rate limits, auth, fallbacks — and why a small-model default with smart escalation is the only sane way to ship.</p>
+        </article>
+        <article class="postcard">
+          <div class="postmeta">2026-02-01</div>
           <h3><a href="./posts/2026-02-01-the-rise-of-agentic-intermediaries.html">The Rise of Agentic Intermediaries: How AI Assistants Are Redefining Software Development</a></h3>
           <p class="muted">When agents become the front door to software, intent becomes the new programming language.</p>
         </article>
