--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="posts">
         <article class="postcard">
           <div class="postmeta">2026-02-01</div>
-          <h3><a href="./posts/2026-02-01-the-rise-of-agentic-intermediaries.html">The Rise of Agentic Intermediaries: How AI Assistants Are Redefining Software Development</a></h3>
-          <p class="muted">Agents are becoming the interface; the question is who sets the standards of quality.</p>
+          <h3><a href="./posts/2026-02-01-taming-the-chaos-lessons-learned-from-deploying-agent-tools.html">Taming the Chaos: Lessons Learned from Deploying Agent Tools</a></h3>
+          <p class="muted">In the real world, “agentic” means rate limits, auth weirdness, and fallbacks—so design like reality exists.</p>
         </article>
       </div>
 
